Creacion de elementos HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+
+
+    <footer>
+        <div class="logo">
+            <img src="" alt="Logo ">
+        </div>
+    </footer>
+
+    <main>
+<div class="zona__encriptado">
+<form action="">
+<input type="text">
+<img src="" alt="Icono de alerta">
+
+<button >Encriptar</button>
+<button>Desencriptar</button>
+
+</form>
+
+
+</div>
+
+<div class="zona__desencriptar">
+    <form action="">
+<input type="text">
+<button>Copiar</button>
+
+    </form>
+
+</div>
+
+
+    </main>
+
+    <footer></footer>
+    <header></header>
 </body>
 </html>
