--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="zona__desencriptar">
     
-<input type="text">
+<input id="copiar_texto" type="text">
 <button>Copiar</button>
 
     
