Implementar llamado de función para enciptar y desencriptar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <img src="" alt="Icono de alerta">
 
 <button  onclick="getText();" name="encriptar" >Encriptar</button>
-<button>Desencriptar</button>
+<button onclick="reverseText();" >Desencriptar</button>
 
 
 
