--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <input id="texto__encriptable" type="text" placeholder="Ingrese texto" name="encriptar">
 <img src="" alt="Icono de alerta">
 
-<button  onclick="getText();" name="encriptar" >Encriptar</button>
+<button  onclick="getText(); " name="encriptar" >Encriptar</button>
 <button onclick="reverseText();" >Desencriptar</button>
 
 
@@ -31,9 +31,9 @@
 </div>
 
 <div class="zona__desencriptar">
-    
-<input id="copiar_texto" type="text">
-<button>Copiar</button>
+    <p id="copiar_texto">No se ha encontrado ningun texto.</p>
+
+<button onclick="copiText();">Copiar</button>
 
     
 
