--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <footer>
         <div class="rodapie">
-            <p>Contacto: <br>
-                Desarrollado por:
+            <p>Contacto: code.lucho33@gmail.com <br>
+                Desarrollado por: Luis Restrepo
             </p>
         </div>
     </footer>
