Implemetar funcion copiar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer>
         <div class="rodapie">
             <p>Contacto: code.lucho33@gmail.com <br>
-                Desarrollado por: Luis Restrepo
+                Desarrollado por: Luis Restrepo.
             </p>
         </div>
     </footer>
